[refactor] TtsController 코드 수정
1. collect -> toList 사용